# my-finance-tracker

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend-fastapi/: .gitignore  env.example  pyproject.toml  requirements.txt
backend-fastapi/app/: config.py  database.py  deps.py  main.py
backend-fastapi/app/models/: __init__.py
backend-fastapi/app/routers/: analytics.py  health.py
backend-fastapi/app/schemas/: __init__.py
docker/mysql/init/: 01-init.sql
frontend/: .prettierignore  .prettierrc  eslint.config.js  package-lock.json  package.json
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  index.ts
frontend/src/hooks/: useTransactions.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts  transactions.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
